# WildAI

./: .gitignore
.devcontainer/: devcontainer.json
WildAI/: LICENSE  Makefile  README.md  pyproject.toml
WildAI/docs/: mkdocs.yml
WildAI/docs/docs/: index.md
WildAI/wildai/: __init__.py  dataset.py  features.py  plots.py
WildAI/wildai/modeling/: predict.py  train.py
data/: README.md
src/: UploadMissingFiles.ipynb
